// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`listStyleImage renders 0 1`] = `
Array [
  .c0 {
  list-style-image: 0;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: 0;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: 0;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`listStyleImage renders function 1`] = `
Array [
  .c0 {
  list-style-image: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: has;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: has;
}

<div
    className="c0"
  />,
]
`;

exports[`listStyleImage renders invalid theme path 1`] = `
Array [
  .c0 {
  list-style-image: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`listStyleImage renders negative number 1`] = `
Array [
  .c0 {
  list-style-image: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`listStyleImage renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  list-style-image: July;
}

@media screen and (min-width:November) {
  .c0 {
    list-style-image: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-image: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-image: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    list-style-image: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: July;
}

@media screen and (min-width:November) {
  .c0 {
    list-style-image: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-image: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-image: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    list-style-image: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    list-style-image: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-image: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-image: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    list-style-image: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    list-style-image: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-image: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-image: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    list-style-image: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`listStyleImage renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    list-style-image: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-image: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-image: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    list-style-image: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    list-style-image: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-image: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-image: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    list-style-image: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    list-style-image: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-image: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-image: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    list-style-image: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    list-style-image: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-image: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-image: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    list-style-image: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`listStyleImage renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  list-style-image: July;
}

@media May {
  .c0 {
    list-style-image: August;
  }
}

@media April {
  .c0 {
    list-style-image: September;
  }
}

@media January {
  .c0 {
    list-style-image: November;
  }
}

@media April {
  .c0 {
    list-style-image: August;
  }
}

@media June {
  .c0 {
    list-style-image: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: July;
}

@media May {
  .c0 {
    list-style-image: August;
  }
}

@media April {
  .c0 {
    list-style-image: September;
  }
}

@media January {
  .c0 {
    list-style-image: November;
  }
}

@media April {
  .c0 {
    list-style-image: August;
  }
}

@media June {
  .c0 {
    list-style-image: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    list-style-image: November;
  }
}

@media April {
  .c0 {
    list-style-image: January;
  }
}

@media January {
  .c0 {
    list-style-image: December;
  }
}

@media April {
  .c0 {
    list-style-image: April;
  }
}

@media June {
  .c0 {
    list-style-image: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    list-style-image: November;
  }
}

@media April {
  .c0 {
    list-style-image: January;
  }
}

@media January {
  .c0 {
    list-style-image: December;
  }
}

@media April {
  .c0 {
    list-style-image: April;
  }
}

@media June {
  .c0 {
    list-style-image: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`listStyleImage renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    list-style-image: July;
  }
}

@media April {
  .c0 {
    list-style-image: August;
  }
}

@media January {
  .c0 {
    list-style-image: September;
  }
}

@media April {
  .c0 {
    list-style-image: November;
  }
}

@media June {
  .c0 {
    list-style-image: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    list-style-image: July;
  }
}

@media April {
  .c0 {
    list-style-image: August;
  }
}

@media January {
  .c0 {
    list-style-image: September;
  }
}

@media April {
  .c0 {
    list-style-image: November;
  }
}

@media June {
  .c0 {
    list-style-image: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    list-style-image: January;
  }
}

@media April {
  .c0 {
    list-style-image: December;
  }
}

@media January {
  .c0 {
    list-style-image: April;
  }
}

@media April {
  .c0 {
    list-style-image: May;
  }
}

@media June {
  .c0 {
    list-style-image: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    list-style-image: January;
  }
}

@media April {
  .c0 {
    list-style-image: December;
  }
}

@media January {
  .c0 {
    list-style-image: April;
  }
}

@media April {
  .c0 {
    list-style-image: May;
  }
}

@media June {
  .c0 {
    list-style-image: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`listStyleImage renders postitive number 1`] = `
Array [
  .c0 {
  list-style-image: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`listStyleImage renders string 1`] = `
Array [
  .c0 {
  list-style-image: July;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: July;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: June;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: June;
}

<div
    className="c0"
  />,
]
`;

exports[`listStyleImage renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`listStyleImage renders valid theme path 1`] = `
Array [
  .c0 {
  list-style-image: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-image: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
